--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          <!-- Course name -->
          <div class="flex gap-4 items-center mb-5 md:mb-0">
             <label for="" class="text-lg md:text-2xl font-semibold">Course Name :</label>
-            <input type="text" / class="rounded-lg p-1" placeholder="type course name" id="CourseName">
+            <input type="text" / class="rounded-lg p-1 w-[170px] md:w-[250px]" placeholder="" id="CourseName">
           </div>
 
          
