fixed text size

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
               <!-- Attendance -->
               <div class="flex justify-between items-center border-2 p-5 rounded-lg">
                   <div class="flex gap-5 items-center">
-                      <img src="./images/Attendence.png" alt="" class="w-12">
-                      <h1 class="text-2xl md:text-4xl font-semibold">Attendance</h1>
+                      <img src="./images/Attendence.png" alt="" class="w-7 md:w-12">
+                      <h1 class="text-lg md:text-4xl font-semibold">Attendance</h1>
                   </div>
                   <input type="number" placeholder="? / 100%" class="text-center w-[100px] md:w-[180px] p-2 rounded-lg border-2" required id="Attendance">
               </div>
@@ -94,8 +94,8 @@
               <!-- Assignments -->
               <div class="flex justify-between items-center border-2 p-5 rounded-lg">
                   <div class="flex gap-5 items-center">
-                      <img src="./images/assignment.png" alt="" class="w-12">
-                      <h1 class="text-2xl md:text-4xl font-semibold">Assignments</h1>
+                      <img src="./images/assignment.png" alt="" class="w-7 md:w-12">
+                      <h1 class="text-lg md:text-4xl font-semibold">Assignments</h1>
                   </div>
                   <input type="number" placeholder="? / 5" class="text-center w-[100px] md:w-[180px] p-2 rounded-lg border-2" required id="Assignments">
               </div>
@@ -103,8 +103,8 @@
               <!-- Presentation -->
               <div class="flex justify-between items-center border-2 p-5 rounded-lg">
                   <div class="flex gap-5 items-center">
-                      <img src="./images/presentation.png" alt="" class="w-12">
-                      <h1 class="text-2xl md:text-4xl font-semibold">Presentation</h1>
+                      <img src="./images/presentation.png" alt="" class="w-7 md:w-12">
+                      <h1 class="text-lg md:text-4xl font-semibold">Presentation</h1>
                   </div>
                   <input type="number" placeholder="? / 8" class="text-center w-[100px] md:w-[180px] p-2 rounded-lg border-2" required id="Presentation">
               </div>
@@ -112,8 +112,8 @@
               <!-- Quiz Average -->
               <div class="flex justify-between items-center border-2 p-5 rounded-lg">
                   <div class="flex gap-5 items-center">
-                      <img src="./images/speech-bubble.png" alt="" class="w-12">
-                      <h1 class="text-2xl md:text-4xl font-semibold">Quiz Average</h1>
+                      <img src="./images/speech-bubble.png" alt="" class="w-7 md:w-12">
+                      <h1 class="text-lg md:text-4xl font-semibold">Quiz Average</h1>
                   </div>
                   <input type="number" placeholder="? / 15" class="text-center w-[100px] md:w-[180px] p-2 rounded-lg border-2" required id="Quiz">
               </div>
@@ -122,8 +122,8 @@
               <div class="md:col-span-2">
                 <div class="flex justify-evenly items-center border-2 p-5 rounded-lg">
                   <div class="flex gap-5 items-center">
-                      <img src="./images/exam.png" alt="" class="w-12">
-                      <h1 class="text-2xl md:text-4xl font-semibold">Mid - Exam</h1>
+                      <img src="./images/exam.png" alt="" class="w-7 md:w-12">
+                      <h1 class="text-lg md:text-4xl font-semibold">Mid - Exam</h1>
                   </div>
                   <input type="number" placeholder="? / 25" class="text-center w-[100px] md:w-[180px] p-2 rounded-lg border-2" required id="Mid">
               </div>
@@ -143,8 +143,8 @@
               <!-- Attendance -->
               <div class="flex justify-between items-center border-2 p-5 rounded-lg">
                   <div class="flex gap-5 items-center">
-                      <img src="./images/Attendence.png" alt="" class="w-12">
-                      <h1 class="text-2xl md:text-4xl font-semibold">Attendance</h1>
+                      <img src="./images/Attendence.png" alt="" class="w-7 md:w-12">
+                      <h1 class="text-lg md:text-4xl font-semibold">Attendance</h1>
                   </div>
                   <input type="number" placeholder="? / 100%" class="text-center w-[100px] md:w-[180px] p-2 rounded-lg border-2" required id="LabAttendence">
               </div>
@@ -152,8 +152,8 @@
               <!-- Lab Performance -->
               <div class="flex justify-between items-center border-2 p-5 rounded-lg">
                   <div class="flex gap-5 items-center">
-                      <img src="./images/assignment.png" alt="" class="w-12">
-                      <h1 class="text-2xl md:text-4xl font-semibold">Lab Performance</h1>
+                      <img src="./images/assignment.png" alt="" class="w-7 md:w-12">
+                      <h1 class="text-lg md:text-4xl font-semibold">Lab Performance</h1>
                   </div>
                   <input type="number" placeholder="? / 25" class="text-center w-[100px] md:w-[180px] p-2 rounded-lg border-2" required id="LabPer">
               </div>
@@ -161,8 +161,8 @@
               <!-- Lab Report -->
               <div class="flex justify-between items-center border-2 p-5 rounded-lg">
                   <div class="flex gap-5 items-center">
-                      <img src="./images/exam.png" alt="" class="w-12">
-                      <h1 class="text-2xl md:text-4xl font-semibold">Lab Report</h1>
+                      <img src="./images/exam.png" alt="" class="w-7 md:w-12">
+                      <h1 class="text-lg md:text-4xl font-semibold">Lab Report</h1>
                   </div>
                   <input type="number" placeholder="? / 25" class="text-center w-[100px] md:w-[180px] p-2 rounded-lg border-2" required id="LabRep">
               </div>
@@ -170,8 +170,8 @@
               <!-- Project -->
               <div class="flex justify-between items-center border-2 p-5 rounded-lg">
                   <div class="flex gap-5 items-center">
-                      <img src="./images/speech-bubble.png" alt="" class="w-12">
-                      <h1 class="text-2xl md:text-4xl font-semibold">Project</h1>
+                      <img src="./images/speech-bubble.png" alt="" class="w-7 md:w-12">
+                      <h1 class="text-lg md:text-4xl font-semibold">Project</h1>
                   </div>
                   <input type="number" placeholder="? / 40" class="text-center w-[100px] md:w-[180px] p-2 rounded-lg border-2" required id="Project">
               </div>
