--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
             
             <!-- Grading -->
              <div class="mt-7">
-              <h2 class="text-center"> <span class="loading loading-dots loading-lg"></span></h2>
-              <div class="overflow-x-auto rounded-box  border border-base-content/5 bg-base-200 mt-4 hidden">
+              <h2 class="text-center" id="Ani1"> <span class="loading loading-dots loading-lg"></span></h2>
+              <div class="overflow-x-auto rounded-box  border border-base-content/5 bg-base-200 mt-4 hidden" id="gradeSheet">
                 <table class="table ">
                   <!-- head -->
                   <thead class="lg:text-base border-b-2 md:text-center">
@@ -212,14 +212,14 @@
                     <tr>
                       <th>4.00</th>
                       <td>A+</td>
-                      <td>47.00</td>
+                      <td id="G4.00">0.00</td>
                       <td><button class="btn bg-slate-200 border-2 border-slate-500 ">add</button></td>
                     </tr>
                     <!-- 3.75 -->
                     <tr>
                       <th>3.75</th>
                       <td>A</td>
-                      <td>47.00</td>
+                      <td id="G3.75">0.00</td>
                       <td><button class="btn bg-slate-200 border-2 border-slate-500">add</button></td>
                     </tr>
 
@@ -228,7 +228,7 @@
                       <tr>
                         <th>3.50</th>
                         <td>A-</td>
-                        <td>47.00</td>
+                        <td id="G3.50">0.00</td>
                         <td><button class="btn bg-slate-200 border-2 border-slate-500">add</button></td>
                       </tr>
 
@@ -236,7 +236,7 @@
                        <tr>
                         <th>3.25</th>
                         <td>B+</td>
-                        <td>47.00</td>
+                        <td id="G3.25">0.00</td>
                         <td><button class="btn bg-slate-200 border-2 border-slate-500">add</button></td>
                       </tr>
 
@@ -245,7 +245,7 @@
                        <tr>
                         <th>3.00</th>
                         <td>B</td>
-                        <td>47.00</td>
+                        <td id="G3.00">0.00</td>
                         <td><button class="btn bg-slate-200 border-2 border-slate-500">add</button></td>
                       </tr>
 
@@ -253,7 +253,7 @@
                        <tr>
                         <th>2.75</th>
                         <td>B-</td>
-                        <td>47.00</td>
+                        <td id="G2.75">0.00</td>
                         <td><button class="btn bg-slate-200 border-2 border-slate-500">add</button></td>
                       </tr>
 
@@ -261,23 +261,23 @@
                        <tr>
                         <th>2.50</th>
                         <td>C+</td>
-                        <td>47.00</td>
+                        <td id="G2.50">0.00</td>
                         <td><button class="btn bg-slate-200 border-2 border-slate-500">add</button></td>
                       </tr>
 
-                       <!-- 3.50 -->
+                       <!-- 2.25 -->
                        <tr>
                         <th>2.25</th>
                         <td>C</td>
-                        <td>47.00</td>
+                        <td id="G2.25">0.00</td>
                         <td><button class="btn bg-slate-200 border-2 border-slate-500">add</button></td>
                       </tr>
 
-                       <!-- 3.50 -->
+                       <!-- 2.00 -->
                        <tr>
                         <th>2.00</th>
                         <td>D</td>
-                        <td>47.00</td>
+                        <td id="G2.00">0.00</td>
                         <td><button class="btn bg-slate-200 border-2 border-slate-500">add</button></td>
                       </tr>
                    
