--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <tr>
                       <th>Point</th>
                       <th>Grade</th>
-                      <th>Marks in final</th>
+                      <th>final</th>
                       <th>Add to SGPA</th>
                     </tr>
                   </thead>
