--- a/index.html
+++ b/index.html
@@ -284,6 +284,32 @@
                   </tbody>
                 </table>
               </div>
+
+              <!-- Lab -->
+
+              <div class="overflow-x-auto rounded-box  border border-base-content/5 bg-base-200 mt-4 hidden" id="gradeSheetLab">
+                <table class="table ">
+                  <!-- head -->
+                  <thead class="lg:text-base border-b-2 md:text-center">
+                    <tr>
+                      <th>Total Marks</th>
+                      <th>Point</th>
+                      <th>Grade</th>
+                      <th>Add to SGPA</th>
+                    </tr>
+                  </thead>
+                  <tbody class="lg:text-base md:text-center">
+                    <!-- 4.00 -->
+                    <tr>
+                      <th id="TM"></th>
+                      <td id="Points"></td>
+                      <td id="Grade"></td>
+                      <td><button class="btn bg-slate-200 border-2 border-slate-500 ">add</button></td>
+                    </tr>
+                  </tbody>
+                </table>
+             </div>
+
              </div>
 
           
