--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DIU SGPA Calculator</title>
+    <title>DIU Final Grade Calculator</title>
 
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -38,15 +38,12 @@
             class="w-5 h-5 md:w-10 md:h-10"
           />
           <h1 class="text-base md:text-3xl font-semibold">
-            DIU SGPA <span class="font-normal">Calculator</span>
+            DIU FINAL GRADE <span class="font-normal">Calculator</span>
           </h1>
         </div>
         <!-- <div>
           <button class="btn md:text-base">Contact</button>
-        </div> -->
-      </div>
-    </div>
-
+        </div> --> </div> </div>
     <!-- main -->
     <div class="w-11/12 md:w-9/12 mx-auto mt-10">
 
